# vigil

./: .gitignore  Cargo.toml  Makefile  README.MD  notes.md  test_ebpf.py
.omc/: project-memory.json
.omc/sessions/: 62f4f91b-62e1-40b7-b704-264292b76db8.json
.omc/state/: agent-replay-62f4f91b-62e1-40b7-b704-264292b76db8.jsonl  subagent-tracking.json
init/dinit/: vigil
init/openrc/: vigil
init/runit/: run
init/s6/vigil/: run
init/systemd/: vigil.service
src/: main.rs  process.rs  scanner.rs
vigil/: Cargo.toml
vigil-common/: Cargo.toml
vigil-common/src/: lib.rs
vigil-ebpf/: Cargo.toml
vigil-ebpf/src/: main.rs
vigil-server/: Cargo.toml
vigil-server/src/: auth.rs  crypto.rs  db.rs  handlers.rs  http.rs  json.rs  main.rs  router.rs
vigil-web/: package-lock.json  package.json  tsconfig.json
vigil-web/public/: index.html  style.css
vigil-web/src/: api.ts  main.ts  router.ts
vigil-web/src/components/: sidebar.ts
vigil-web/src/pages/: dashboard.ts  login.ts  match-detail.ts  matches.ts  player-detail.ts  players.ts  settings.ts
vigil/src/: cli.rs  client.rs  config.rs  crypto.rs  ebpf.rs  http_client.rs  json.rs  kernel_log.rs  main.rs  network.rs  notify.rs  process.rs  report.rs  scanner.rs  sys.rs  timestamp.rs  toml_parser.rs
vigil/src/bpf/: elf.rs  loader.rs  mod.rs  perf.rs
vigil/src/runtime/: executor.rs  io.rs  mod.rs  reactor.rs  time.rs  waker.rs
